tables overflowing | embeds->iframes | filenames corrected

--- a/assets/css/typeB.css
+++ b/assets/css/typeB.css
@@ -291,12 +291,15 @@ body	{
 }
 .table-content{
 	padding: 5vw 4vw;
-	font-size: 20px;
-	font-family: "sans-serif";
+	font-size: 16px;
+	font-family: "Raleway", sans-serif;
+	width: 100%;
+	overflow: auto;
 }
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  text-align: left;
 }
 th,td{
 	color: black;
@@ -311,6 +314,12 @@ th,td{
 	content: "";
 	display: table;
 	clear: both;
+}
+
+iframe {
+	width: 100%;
+	height: 80vh;
+	border: none;
 }
 
 /* Footer */
@@ -405,6 +414,13 @@ th,td{
 	}
 	.aboutContent	{
 		padding: 20px;
+	}
+	iframe {
+		margin: 10px 0;
+		height: 20vh;
+	}
+	.download_doc {
+		display: none;
 	}
 	.footer	{
 		display: block;
